# P5-Satellite

./: .gitignore  .gitmodules  LICENSE  README.md  SRFMath.cc  SRFMath.h  blackboard.cc  constellationHandler.cc  constellationHandler.h  linkHandler.cc  linkHandler.h  p5-satellite-marcus.cc  p5-satellite-marcus.cpp  p5-satellite.cc  tle-handler.cc  tle-handler.h  tleHandler.cc  tleHandler.h  traceHandler.cc  traceHandler.h
Prototype/: blackboard.cc
PrototypeSatMobility/: MultiSatTest.cc
PrototypeSquare/: square.cc
TLE-handling/: TLE-to-UTM.cpp  TLE_analysis.py  TLE_fetcher.py  starlink_13-11-2024_orbits.txt  starlink_13-11-2024_tle_data.txt
TLE_handling/: MultiSatTest.cc  TLE-to-UTM.cc  TLE-to-UTM.cpp  TLE_fetcher.py  starlink_11-11-2024_tle_age.txt  starlink_12-11-2024_tle_age.txt
Test1/: blackboard.cc
Test2/: Test.cc  lib.cc  lib.h
UtilityPython/: CWND_Plotter.py  RTT_Plotter.py  TLE_analysis.py
dynamic-link-graph/: dynamic-link-graph.cc
libraries/: CMakeLists.txt
libraries/cpp-lib/: CMakeLists.txt  lib.h
libraries/cpp-lib/src2/: testClass.cc  testClass.h
link-math-testing/: link-math-plotting.py
resources/: starlink_13-11-2024_INC89.0_RAAN78.0.txt  starlink_13-11-2024_tle_data.txt  starlink_13-11-2024_tle_dataPOLAR.txt
